--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    This file is part of Everit - Jetty OSGi Boot.
+    Copyright (C) 2015 Everit Kft. (http://www.everit.org)
 
-    Everit - Jetty OSGi Boot is free software: you can redistribute it and/or modify
-    it under the terms of the GNU Lesser General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-    Everit - Jetty OSGi Boot is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU Lesser General Public License for more details.
+            http://www.apache.org/licenses/LICENSE-2.0
 
-    You should have received a copy of the GNU Lesser General Public License
-    along with Everit - Jetty OSGi Boot.  If not, see <http://www.gnu.org/licenses/>.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -43,8 +42,8 @@
 
   <licenses>
     <license>
-      <name>GNU Lesser General Public License v3.0</name>
-      <url>http://opensource.org/licenses/LGPL-3.0</url>
+      <name>Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -54,7 +53,7 @@
     <developerConnection>scm:git:https://github.com/everit-org/${projectpath}.git</developerConnection>
     <url>https://github.com/everit-org/${projectpath}</url>
   </scm>
-  <url>http://everit.org</url>
+  <url>https://github.com/everit-org/${projectpath}</url>
 
   <issueManagement>
     <system>GitHub</system>
@@ -69,8 +68,10 @@
 
   <organization>
     <name>Everit Kft.</name>
-    <url>http://www.everit.biz</url>
+    <url>http://www.everit.org</url>
   </organization>
+
+  <inceptionYear>2015</inceptionYear>
 
   <build>
     <plugins>
@@ -88,6 +89,36 @@
             <Bundle-Activator>org.everit.osgi.jetty.boot.internal.JettyBootActivator</Bundle-Activator>
           </instructions>
         </configuration>
+      </plugin>
+      <plugin>
+        <inherited>true</inherited>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+          <aggregate>false</aggregate>
+          <header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
+          <excludes>
+            <exclude>LICENSE</exclude>
+          </excludes>
+          <skipExistingHeaders>true</skipExistingHeaders>
+          <properties>
+            <owner>${project.organization.name}</owner>
+            <email>${project.organization.url}</email>
+          </properties>
+          <mapping>
+            <java>SLASHSTAR_STYLE</java>
+          </mapping>
+        </configuration>
+        <executions>
+          <execution>
+            <id>check-license</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
