--- a/pom.xml
+++ b/pom.xml
@@ -1,47 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    This file is part of Everit - Jetty OSGi Boot Parent.
+    Copyright (C) 2011 Everit Kft. (http://www.everit.biz)
 
-    Everit - Jetty OSGi Boot Parent is free software: you can redistribute it and/or modify
-    it under the terms of the GNU Lesser General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-    Everit - Jetty OSGi Boot Parent is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU Lesser General Public License for more details.
+            http://www.apache.org/licenses/LICENSE-2.0
 
-    You should have received a copy of the GNU Lesser General Public License
-    along with Everit - Jetty OSGi Boot Parent.  If not, see <http://www.gnu.org/licenses/>.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.everit.config</groupId>
-        <artifactId>org.everit.config.oss</artifactId>
-        <version>5.0.2</version>
-    </parent>
+  <parent>
+    <groupId>org.everit.config</groupId>
+    <artifactId>org.everit.config.oss</artifactId>
+    <version>5.0.2</version>
+  </parent>
 
-    <groupId>org.everit.osgi</groupId>
-    <artifactId>org.everit.osgi.jetty.boot.parent</artifactId>
-    <version>1.0.0</version>
-    <packaging>pom</packaging>
-    <name>Everit - Jetty OSGi Boot Parent</name>
+  <groupId>org.everit.osgi</groupId>
+  <artifactId>org.everit.osgi.jetty.boot.parent</artifactId>
+  <version>1.0.0</version>
+  <packaging>pom</packaging>
+  <name>Everit - Jetty OSGi Boot Parent</name>
 
-    <properties>
-        <maven.site.skip>true</maven.site.skip>
-        <maven.site.deploy.skip>true</maven.site.deploy.skip>
-        <maven.deploy.skip>true</maven.deploy.skip>
-    </properties>
+  <properties>
+    <maven.site.skip>true</maven.site.skip>
+    <maven.site.deploy.skip>true</maven.site.deploy.skip>
+    <maven.deploy.skip>true</maven.deploy.skip>
+  </properties>
 
-    <modules>
-        <module>core</module>
-        <module>tests</module>
-    </modules>
+  <modules>
+    <module>core</module>
+    <module>tests</module>
+  </modules>
+
+  <build>
+    <plugins>
+      <plugin>
+        <inherited>true</inherited>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+          <aggregate>false</aggregate>
+          <header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
+          <excludes>
+            <exclude>LICENSE</exclude>
+          </excludes>
+          <skipExistingHeaders>true</skipExistingHeaders>
+          <properties>
+            <owner>${project.organization.name}</owner>
+            <email>${project.organization.url}</email>
+          </properties>
+          <mapping>
+            <java>SLASHSTAR_STYLE</java>
+          </mapping>
+        </configuration>
+        <executions>
+          <execution>
+            <id>check-license</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
