--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    This file is part of Everit - Jetty OSGi Boot Tests.
+    Copyright (C) 2011 Everit Kft. (http://www.everit.biz)
 
-    Everit - Jetty OSGi Boot Tests is free software: you can redistribute it and/or modify
-    it under the terms of the GNU Lesser General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-    Everit - Jetty OSGi Boot Tests is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU Lesser General Public License for more details.
+            http://www.apache.org/licenses/LICENSE-2.0
 
-    You should have received a copy of the GNU Lesser General Public License
-    along with Everit - Jetty OSGi Boot Tests.  If not, see <http://www.gnu.org/licenses/>.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -49,7 +48,8 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-            <EOSGi-TestNum>0</EOSGi-TestNum>
+            <EOSGi-TestNum>1</EOSGi-TestNum>
+            <Bundle-Activator>org.everit.osgi.jetty.boot.tests.JettyBootTestActivator</Bundle-Activator>
           </instructions>
         </configuration>
       </plugin>
@@ -67,7 +67,7 @@
               <id>jettyBootFelix</id>
               <framework>felix</framework>
               <systemProperties>
-                <mvel2.disable.jit>true</mvel2.disable.jit>
+                <org.osgi.service.http.port>0</org.osgi.service.http.port>
               </systemProperties>
               <vmOptions>
                 <vmOption>-Xdebug</vmOption>
@@ -78,7 +78,7 @@
               <id>jettyBootEquinox</id>
               <framework>equinox</framework>
               <systemProperties>
-                <mvel2.disable.jit>true</mvel2.disable.jit>
+                <org.osgi.service.http.port>0</org.osgi.service.http.port>
               </systemProperties>
               <vmOptions>
                 <vmOption>-Xdebug</vmOption>
@@ -100,6 +100,13 @@
     </plugins>
   </build>
   <dependencies>
+
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+      <version>5.0.0</version>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.everit.osgi.dev</groupId>
