--- a/core/pom.xml
+++ b/core/pom.xml
@@ -83,6 +83,11 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+            <Import-Package>
+              javax.servlet.*;version="[2.6,4)",
+              org.eclipse.jetty.*;version="[9.0,10)",
+              *
+            </Import-Package>
             <Export-Package>
               org.everit.osgi.jetty.boot;version="1.0.0"
             </Export-Package>
@@ -133,7 +138,7 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
-      <version>9.2.8.v20150217</version>
+      <version>9.2.9.v20150224</version>
       <exclusions>
         <exclusion>
           <artifactId>javax.servlet-api</artifactId>
