--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -28,7 +28,7 @@
   </parent>
 
   <artifactId>org.everit.osgi.jetty.boot.tests</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <packaging>bundle</packaging>
   <name>Everit - Jetty OSGi Boot Tests</name>
