--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,12 +23,12 @@
   <parent>
     <groupId>org.everit.config</groupId>
     <artifactId>org.everit.config.oss</artifactId>
-    <version>7.0.0</version>
+    <version>7.1.0</version>
   </parent>
 
-  <groupId>org.everit.osgi</groupId>
-  <artifactId>org.everit.osgi.jetty.boot</artifactId>
-  <version>1.0.2</version>
+  <groupId>org.everit.jetty</groupId>
+  <artifactId>org.everit.jetty.boot</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Everit - Jetty OSGi Boot</name>
@@ -87,9 +87,9 @@
               *
             </Import-Package>
             <Export-Package>
-              org.everit.osgi.jetty.boot;version="1.0.0"
+              org.everit.jetty.boot;version="1.0.0"
             </Export-Package>
-            <Bundle-Activator>org.everit.osgi.jetty.boot.internal.JettyBootActivator</Bundle-Activator>
+            <Bundle-Activator>org.everit.jetty.boot.internal.JettyBootActivator</Bundle-Activator>
           </instructions>
         </configuration>
       </plugin>
