--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
   <parent>
     <groupId>org.everit.config</groupId>
     <artifactId>org.everit.config.oss</artifactId>
-    <version>7.0.0</version>
+    <version>7.1.0</version>
   </parent>
 
-  <groupId>org.everit.osgi</groupId>
-  <artifactId>org.everit.osgi.jetty.boot.parent</artifactId>
-  <version>1.0.0</version>
+  <groupId>org.everit.jetty</groupId>
+  <artifactId>org.everit.jetty.boot.parent</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Everit - Jetty OSGi Boot Parent</name>
 
