--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -22,13 +22,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.everit.osgi</groupId>
-    <artifactId>org.everit.osgi.jetty.boot.parent</artifactId>
-    <version>1.0.0</version>
+    <groupId>org.everit.jetty</groupId>
+    <artifactId>org.everit.jetty.boot.parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>org.everit.osgi.jetty.boot.tests</artifactId>
-  <version>1.0.2</version>
+  <artifactId>org.everit.jetty.boot.tests</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
 
   <packaging>bundle</packaging>
   <name>Everit - Jetty OSGi Boot Tests</name>
@@ -48,17 +48,17 @@
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <EOSGi-TestNum>1</EOSGi-TestNum>
-            <Bundle-Activator>org.everit.osgi.jetty.boot.tests.JettyBootTestActivator</Bundle-Activator>
+            <Bundle-Activator>org.everit.jetty.boot.tests.JettyBootTestActivator</Bundle-Activator>
           </instructions>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.everit.osgi.dev</groupId>
         <artifactId>eosgi-maven-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.3.3</version>
         <configuration>
           <jacoco>
-            <includes>org.everit.osgi.jetty.boot.*</includes>
+            <includes>org.everit.jetty.boot.*</includes>
             <output>$${ if (System.getenv("EOSGI_STOP_AFTER_TESTS").equals("true")) "file"; else "tcpserver"; }</output>
           </jacoco>
           <environments>
@@ -112,18 +112,18 @@
     <dependency>
       <groupId>org.everit.osgi.dev</groupId>
       <artifactId>org.everit.osgi.dev.testrunner.junit4</artifactId>
-      <version>3.0.4</version>
+      <version>3.0.5</version>
     </dependency>
 
     <dependency>
       <groupId>org.everit.osgi.dev</groupId>
       <artifactId>org.everit.osgi.dev.richconsole</artifactId>
-      <version>1.2.1</version>
+      <version>1.2.2</version>
     </dependency>
 
     <dependency>
-      <groupId>org.everit.osgi</groupId>
-      <artifactId>org.everit.osgi.jetty.boot</artifactId>
+      <groupId>org.everit.jetty</groupId>
+      <artifactId>org.everit.jetty.boot</artifactId>
       <version>${project.version}</version>
     </dependency>
 
@@ -132,12 +132,12 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>1.7.7</version>
+      <version>1.7.12</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.7</version>
+      <version>1.7.12</version>
     </dependency>
 
     <dependency>
@@ -167,7 +167,7 @@
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.webconsole</artifactId>
-      <version>4.2.6</version>
+      <version>4.2.14</version>
     </dependency>
 
     <dependency>
