--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <groupId>org.everit.jetty</groupId>
-  <artifactId>org.everit.jetty.boot</artifactId>
+  <artifactId>org.everit.jetty.osgi.boot</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
@@ -87,9 +87,9 @@
               *
             </Import-Package>
             <Export-Package>
-              org.everit.jetty.boot;version="1.0.0"
+              org.everit.jetty.osgi.boot;version="1.0.0"
             </Export-Package>
-            <Bundle-Activator>org.everit.jetty.boot.internal.JettyBootActivator</Bundle-Activator>
+            <Bundle-Activator>org.everit.jetty.osgi.boot.internal.JettyBootActivator</Bundle-Activator>
           </instructions>
         </configuration>
       </plugin>
