--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,10 @@
   </parent>
 
   <groupId>org.everit.jetty</groupId>
-  <artifactId>org.everit.jetty.boot.parent</artifactId>
+  <artifactId>org.everit.jetty.osgi.boot.parent</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+
   <name>Everit - Jetty OSGi Boot Parent</name>
 
   <properties>
@@ -43,4 +44,5 @@
     <module>core</module>
     <module>tests</module>
   </modules>
+
 </project>
