--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -23,14 +23,16 @@
 
   <parent>
     <groupId>org.everit.jetty</groupId>
-    <artifactId>org.everit.jetty.boot.parent</artifactId>
+    <artifactId>org.everit.jetty.osgi.boot.parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>org.everit.jetty.boot.tests</artifactId>
+  <groupId>org.everit.jetty</groupId>
+  <artifactId>org.everit.jetty.osgi.boot.tests</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
   <packaging>bundle</packaging>
+
   <name>Everit - Jetty OSGi Boot Tests</name>
 
   <properties>
@@ -48,7 +50,7 @@
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <EOSGi-TestNum>1</EOSGi-TestNum>
-            <Bundle-Activator>org.everit.jetty.boot.tests.JettyBootTestActivator</Bundle-Activator>
+            <Bundle-Activator>org.everit.jetty.osgi.boot.tests.JettyBootTestActivator</Bundle-Activator>
           </instructions>
         </configuration>
       </plugin>
@@ -123,7 +125,7 @@
 
     <dependency>
       <groupId>org.everit.jetty</groupId>
-      <artifactId>org.everit.jetty.boot</artifactId>
+      <artifactId>org.everit.jetty.osgi.boot</artifactId>
       <version>${project.version}</version>
     </dependency>
 
