--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,7 +28,7 @@
 
   <groupId>org.everit.jetty</groupId>
   <artifactId>org.everit.jetty.osgi.boot</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>bundle</packaging>
 
   <name>Everit - Jetty OSGi Boot</name>
