--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.everit.jetty</groupId>
   <artifactId>org.everit.jetty.osgi.boot.parent</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <name>Everit - Jetty OSGi Boot Parent</name>
