--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -24,12 +24,12 @@
   <parent>
     <groupId>org.everit.jetty</groupId>
     <artifactId>org.everit.jetty.osgi.boot.parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <groupId>org.everit.jetty</groupId>
   <artifactId>org.everit.jetty.osgi.boot.tests</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <packaging>bundle</packaging>
 
