--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -16,7 +16,8 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
@@ -27,18 +28,12 @@
     <version>1.0.0</version>
   </parent>
 
-  <groupId>org.everit.jetty</groupId>
   <artifactId>org.everit.jetty.osgi.boot.tests</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
 
   <packaging>bundle</packaging>
 
   <name>Everit - Jetty OSGi Boot Tests</name>
-
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
 
   <build>
     <plugins>
@@ -61,7 +56,8 @@
         <configuration>
           <jacoco>
             <includes>org.everit.jetty.boot.*</includes>
-            <output>$${ if (System.getenv("EOSGI_STOP_AFTER_TESTS").equals("true")) "file"; else "tcpserver"; }</output>
+            <output>$${ if (System.getenv("EOSGI_STOP_AFTER_TESTS").equals("true")) "file"; else
+              "tcpserver"; }</output>
           </jacoco>
           <environments>
             <environment>
